objects/Hour__c.object
<CustomObject>
    <fields>
        <fullName>FullNameFormula__c</fullName>
        <formula>Trim(Left(Wage__r.EmploymentPeriod__r.Employee__r.FullNameFormula__c,31)) &amp;&apos;_&apos;&amp; Trim(Left(Location__r.Name, 30)) &amp; &apos;_&apos; &amp;TEXT(MONTH(Wage__r.StartDate__c)) +&quot;/&quot;+ TEXT(DAY(Wage__r.StartDate__c))+&quot;/&quot; + RIGHT(TEXT(YEAR(Wage__r.StartDate__c)),2) &amp;&apos;_&apos;&amp;
TEXT(MONTH(Wage__r.EndDate__c)) +&quot;/&quot;+TEXT(DAY(Wage__r.EndDate__c)) +&quot;/&quot;+ RIGHT(TEXT(YEAR(Wage__r.EndDate__c)),2)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Full Name</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>HourAmount__c</fullName>
        <description>Indicates the number of hours worked</description>
        <inlineHelpText>Indicates the number of hours worked</inlineHelpText>
        <label>Hours Worked</label>
        <precision>18</precision>
        <required>true</required>
        <scale>8</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>HourEID__c</fullName>
        <description>The Enterprise ID for this hour record.</description>
        <externalId>true</externalId>
        <inlineHelpText>The Enterprise ID for this hour record.</inlineHelpText>
        <label>Hour EID</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
        <unique>true</unique>
    </fields>
    <fields>
        <fullName>Location__c</fullName>
        <description>Indicates the location where the hours were worked</description>
        <inlineHelpText>Indicates the location where the hours were worked</inlineHelpText>
        <label>Location</label>
        <referenceTo>Location__c</referenceTo>
        <relationshipLabel>Hours</relationshipLabel>
        <relationshipName>Hours</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>RateAmount__c</fullName>
        <description>Indicates the hourly rate</description>
        <inlineHelpText>Indicates the hourly rate</inlineHelpText>
        <label>Hourly Rate</label>
        <precision>18</precision>
        <scale>8</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Wage__c</fullName>
        <description>The wage record associated with this hour record</description>
        <inlineHelpText>The wage record associated with this hour record</inlineHelpText>
        <label>Wage</label>
        <referenceTo>Wage__c</referenceTo>
        <relationshipLabel>Hours</relationshipLabel>
        <relationshipName>Hours</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <label>Hour</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Hour Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Hours</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>